全部流程走通
可以自动创建数据库 尚需完善

--- a/ls.common/ls.common.csproj
+++ b/ls.common/ls.common.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="Extensions\AutoMapperExtension.cs" />
     <Compile Include="Extensions\CollectionExtensions.cs" />
+    <Compile Include="Extensions\ExpressionExtensions.cs" />
     <Compile Include="Extensions\ParamterCheckExtensions.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="HashHelper.cs" />
