整体流程实践

--- a/ls.web/Web.config
+++ b/ls.web/Web.config
@@ -9,13 +9,14 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="default" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-ls.web-20150911062250.mdf;Initial Catalog=aspnet-ls.web-20150911062250;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!--<add name="default2" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-ls.web-20150911062250.mdf;Initial Catalog=aspnet-ls.web-20150911062250;Integrated Security=True" providerName="System.Data.SqlClient" />-->
+    <add name="ls" connectionString="Data Source=.;Initial Catalog=ls; uid=sa; pwd=123456;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="owin:AutomaticAppStartup " value="false" />
   </appSettings>
   <system.web>
-   
+
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
@@ -24,13 +25,14 @@
     <modules>
       <remove name="FormsAuthentication" />
     </modules>
-    
-  <handlers>
+
+    <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers></system.webServer>
+    </handlers>
+  </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
