--- a/ls.web/Views/Web.config
+++ b/ls.web/Views/Web.config
@@ -18,6 +18,10 @@
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
         <add namespace="ls.web" />
+        <add namespace="ls.data.dtos"/>
+        <add namespace="PagedList"/>
+        <add namespace="PagedList.Mvc"/>
+
       </namespaces>
     </pages>
   </system.web.webPages.razor>
