--- a/ls.data/ls.data.csproj
+++ b/ls.data/ls.data.csproj
@@ -40,8 +40,15 @@
     <Reference Include="EntityFramework.SqlServer">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="PagedList">
+      <HintPath>..\packages\PagedList.1.17.0.0\lib\net40\PagedList.dll</HintPath>
+    </Reference>
+    <Reference Include="PagedList.Mvc">
+      <HintPath>..\packages\PagedList.Mvc.4.5.0.0\lib\net40\PagedList.Mvc.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -54,11 +61,13 @@
     <Compile Include="DtoMappers.cs" />
     <Compile Include="ModelConfigurations\BlogConfiguration.cs" />
     <Compile Include="ModelConfigurations\BlogConfiguration.generated.cs" />
+    <Compile Include="ModelConfigurations\CommentConfiguration.cs" />
+    <Compile Include="ModelConfigurations\CommentConfiguration.generated.cs" />
     <Compile Include="models\Blog.cs" />
+    <Compile Include="models\Comment.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <WCFMetadata Include="Service References\" />
+    <Compile Include="query\BlogQueryInfo.cs" />
+    <Compile Include="query\QueryInfoBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ls.context\ls.context.csproj">
@@ -69,6 +78,9 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Content\PagedList.css" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
