--- a/ls.web/Web.config
+++ b/ls.web/Web.config
@@ -13,6 +13,7 @@
     <add name="ls" connectionString="Data Source=.;Initial Catalog=ls; uid=sa; pwd=123456;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
+    <add key="pageSize" value="2" />
     <add key="owin:AutomaticAppStartup " value="false" />
   </appSettings>
   <system.web>
@@ -69,7 +70,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
