--- a/ls.core/ls.core.csproj
+++ b/ls.core/ls.core.csproj
@@ -30,7 +30,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -39,6 +47,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data\EntityBase.cs" />
+    <Compile Include="Data\EntityConfigurationBase.cs" />
+    <Compile Include="Data\IContextTypeResolver.cs" />
+    <Compile Include="Data\IEntity.cs" />
+    <Compile Include="Data\IEntityDto.cs" />
+    <Compile Include="Data\IEntityMapper.cs" />
+    <Compile Include="Data\IRepository.cs" />
+    <Compile Include="Data\IUnitOfWork.cs" />
+    <Compile Include="Data\Repository.cs" />
     <Compile Include="Dependency\IDependency.cs" />
     <Compile Include="Dependency\IIocResolver.cs" />
     <Compile Include="Dependency\ILifetimeScopeDependency.cs" />
@@ -51,9 +68,12 @@
     <Compile Include="Dependency\SingtonDependencyTypeFinder.cs" />
     <Compile Include="Dependency\TransientDependencyTypeFinder.cs" />
     <Compile Include="Initialize\IDatabaseInitializer.cs" />
-    <Compile Include="Initialize\IDataHandlerInitializer.cs" />
     <Compile Include="Initialize\IFrameworkInitializer.cs" />
     <Compile Include="Initialize\IIocInitializer.cs" />
+    <Compile Include="Migrations\AutoMigrationsConfiguration.cs" />
+    <Compile Include="Migrations\CreateDatabaseIfNotExistsWithSeedBase.cs" />
+    <Compile Include="Migrations\ISeedAction.cs" />
+    <Compile Include="Migrations\MigrationsConfigurationWithSeedBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reflection\CurrentDomainAssemblyFinder.cs" />
     <Compile Include="Reflection\IAssemblyFinder.cs" />
@@ -61,7 +81,14 @@
     <Compile Include="Reflection\IMethodInfoFinder.cs" />
     <Compile Include="Reflection\ITypeFinder.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>xcopy $(TargetPath) $(SolutionDir)lib\ /y</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
