--- a/ls.webbase/ls.web.core.csproj
+++ b/ls.webbase/ls.web.core.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{9EB29D4B-70FE-4C49-9949-4419EBDB9CA6}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ls.webbase</RootNamespace>
-    <AssemblyName>ls.webbase</AssemblyName>
+    <RootNamespace>ls.web.core</RootNamespace>
+    <AssemblyName>ls.web.core</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,6 +40,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Autofac.WebApi2.3.4.0\lib\net45\Autofac.Integration.WebApi.dll</HintPath>
     </Reference>
+    <Reference Include="AutoMapper, Version=4.0.4.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\AutoMapper.4.0.4\lib\net45\AutoMapper.dll</HintPath>
+    </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
@@ -57,6 +61,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Net.Http.Formatting, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -102,16 +107,29 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Ioc\AutofacIocInitializerBase.cs" />
+    <Compile Include="Ioc\AutofacMvcIocInitializer.cs" />
+    <Compile Include="Ioc\AutofacWebApiIocInitializer.cs" />
+    <Compile Include="Defaults\DefaultDbContext.cs" />
+    <Compile Include="Defaults\DefaultDbContextInitializer.cs" />
+    <Compile Include="Resolver\DbContextTypeResolver.cs" />
+    <Compile Include="Dependency\IMvcIocInitializer.cs" />
+    <Compile Include="Dependency\IWebApiIocInitializer.cs" />
+    <Compile Include="Resolver\MvcIocResolver.cs" />
+    <Compile Include="Resolver\WebApiIocResolver.cs" />
     <Compile Include="Initialize\DatabaseInitializer.cs" />
+    <Compile Include="Initialize\DbContextBase.cs" />
+    <Compile Include="Initialize\DbContextInitializerBase.cs" />
+    <Compile Include="Initialize\DbContextManager.cs" />
     <Compile Include="Initialize\EntityMapperAssemblyFinder.cs" />
     <Compile Include="Initialize\FrameworkInitializer.cs" />
     <Compile Include="Initialize\IocInitializerBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ls.context\ls.context.csproj">
-      <Project>{66577dbe-e0af-4e87-a795-67682b472815}</Project>
-      <Name>ls.context</Name>
+    <ProjectReference Include="..\ls.common\ls.common.csproj">
+      <Project>{896c7c08-82c9-4ab6-bbfc-e8bd4ff01307}</Project>
+      <Name>ls.common</Name>
     </ProjectReference>
     <ProjectReference Include="..\ls.core\ls.core.csproj">
       <Project>{eaefa544-df60-44f8-8f63-ee1d5de14e60}</Project>
@@ -125,6 +143,9 @@
     </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>xcopy $(TargetPath) $(SolutionDir)lib\ /y</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
