--- a/ls.web.service/ls.web.service.csproj
+++ b/ls.web.service/ls.web.service.csproj
@@ -58,6 +58,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="configurations\BlogConfiguration.auto.cs" />
+    <Compile Include="configurations\BlogConfiguration.cs" />
+    <Compile Include="configurations\CommentConfiguration.auto.cs" />
+    <Compile Include="configurations\CommentConfiguration.cs" />
     <Compile Include="DtoMappers.cs" />
     <Compile Include="dtos\BlogDto.cs" />
     <Compile Include="Imp\BlogService.cs" />
@@ -72,10 +76,26 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="query\BlogQueryInfo.cs" />
     <Compile Include="query\QueryInfoBase.cs" />
+    <Compile Include="T4\ConfigurationTextTemplate.cs">
+      <DependentUpon>ConfigurationTextTemplate.tt</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+    <None Include="T4\ConfigurationAppendTemplate.tt" />
+    <None Include="T4\ConfigurationTemplate.tt" />
+    <None Include="T4\ConfigurationTextTemplate.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>ConfigurationTextTemplate.cs</LastGenOutput>
+      <LastOutputs>
+..\configurations\BlogConfiguration.auto.cs
+..\configurations\CommentConfiguration.auto.cs
+.\ConfigurationTextTemplate.cs
+</LastOutputs>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ls.common\ls.common.csproj">
@@ -86,6 +106,9 @@
       <Project>{eaefa544-df60-44f8-8f63-ee1d5de14e60}</Project>
       <Name>ls.core</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
